force-app/main/default/objects/AdditionalProduct__c/AdditionalProduct__c.object-meta.xml
<CustomObject>
    <description>Object to store additional product details</description>
    <label>Additional Product</label>
    <nameField>
        <displayFormat>APN-{0000}</displayFormat>
        <label>Additional Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>