force-app/main/default/objects/AdditionalProduct__c/fields/CrossSellProduct__c.field-meta.xml
<CustomField>
    <fullName>CrossSellProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CrossSellProduct related to the product</description>
    <label>CrossSell Product</label>
    <referenceTo>FinancialProduct__c</referenceTo>
    <relationshipLabel
  >Additional Products (CrossSell Product)</relationshipLabel>
    <relationshipName>CrossSellProducts</relationshipName>
    <type>Lookup</type>
</CustomField>