force-app/main/default/objects/AdditionalProduct__c/fields/InternalCode__c.field-meta.xml
<CustomField>
    <fullName>InternalCode__c</fullName>
    <description>to store product code</description>
    <externalId>true</externalId>
    <label>Internal Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>